force-app/main/default/objects/School__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G.B.NAGAR</fullName>
            </value>
            <value>
                <fullName>GHAZIABAD</fullName>
            </value>
            <value>
                <fullName>BADARPUR BORDER</fullName>
            </value>
            <value>
                <fullName>CHADNI CHOWK</fullName>
            </value>
            <value>
                <fullName>MUMBAI</fullName>
            </value>
            <value>
                <fullName>PUNE</fullName>
            </value>
            <value>
                <fullName>BANGALORE</fullName>
            </value>
            <value>
                <fullName>MYSORE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>