force-app/main/default/objects/School__c/fields/TOTAL_STUDENT__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_STUDENT__c</fullName>
    <label>TOTAL STUDENT</label>
    <summaryForeignKey>Student__c.School__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>